--- a/label_gen.ipynb
+++ b/label_gen.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "knowledge_path = \"info/knowledge.txt\"\n",
     "demo_path = \"info/demo.txt\"\n",
     "example_path = \"info/example.txt\"\n",
+    "wine_path = \"raw/wines.csv\"\n",
     "today = pd.Timestamp(\"today\").strftime(\"%Y%m%d\")\n",
     "output_csv = f\"output/labels_{today}.csv\"\n",
-    "output_txt = f\"output/labels_{today}.txt\""
+    "output_csv_2 = f\"output/labels_{today}_2.csv\"\n",
+    "output_txt = f\"output/labels_{today}.txt\"\n",
+    "output_txt_2 = f\"output/labels_{today}_2.txt\""
    ]
   },
   {
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,39 +72,36 @@
     "MY_KEY = \"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\"\n",
     "openai.api_key = MY_KEY\n",
     "OPENAI_API_URL = \"https://api.openai.com/v1/chat/completions\"\n",
-    "APPROACH = 1 # 1: by information; 2: by wine\n",
+    "APPROACH = 2 # 1: by information; 2: by wine\n",
     "\n",
     "# APPROACH 1\n",
     "category_list = [\"產區標籤\", \"國家標籤\", \"品種標籤\", \"風味標籤\", \"口感標籤\", \"製成標籤\"]\n",
     "ADD_CATEGORY = True\n",
     "\n",
     "# APPROACH 2\n",
-    "NUM_LABELS = 5"
+    "NUM_LABELS = 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_file(file_path, approach):\n",
+    "def read_file(file_path):\n",
     "    \"\"\"Read content from Excel or text file.\"\"\"\n",
-    "    if approach == 1:\n",
-    "        if file_path.endswith(\".xlsx\"):\n",
-    "            df = pd.read_excel(file_path)\n",
-    "            return df.to_string(index=False)\n",
-    "        elif file_path.endswith(\".txt\"):\n",
-    "            with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
-    "                return file.read()\n",
-    "        else:\n",
-    "            raise ValueError(\"Unsupported file format\")\n",
-    "    elif approach == 2:\n",
-    "        if file_path.endswith(\".xlsx\"):\n",
-    "            df = pd.read_excel(file_path)\n",
-    "            return df\n",
-    "        else:\n",
-    "            raise ValueError(\"Unsupported file format\")\n",
+    "    if file_path.endswith(\".xlsx\"):\n",
+    "        df = pd.read_excel(file_path)\n",
+    "        return df.to_string(index=False)\n",
+    "    elif file_path.endswith(\".txt\"):\n",
+    "        with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "            return file.read()\n",
+    "    elif file_path.endswith(\".csv\"):\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        return df\n",
+    "    else:\n",
+    "        raise ValueError(\"Unsupported file format\")\n",
+    "\n",
     "\n",
     "def send_request_to_openai(prompt, max_tokens):\n",
     "    \"\"\"Send a POST request to OpenAI API.\"\"\"\n",
@@ -190,15 +190,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main(APPROACH):\n",
+    "    print(f\"Generating labels by Approach {APPROACH}\")\n",
     "    if APPROACH == 1:\n",
-    "        knowledge = read_file(knowledge_path, APPROACH)\n",
-    "        examples = read_file(example_path, APPROACH)\n",
+    "        knowledge = read_file(knowledge_path)\n",
+    "        examples = read_file(example_path)\n",
     "        if ADD_CATEGORY:\n",
     "            new_categories = suggest_new_categories(knowledge, category_list)\n",
     "            category_list.extend(new_categories)\n",
@@ -211,12 +219,65 @@
     "            labels = generate_labels(knowledge, examples, category, num_labels, APPROACH)\n",
     "            save_to_csv(category, labels, output_csv)\n",
     "    elif APPROACH == 2:\n",
-    "        df = read_file(example_path, APPROACH)\n",
+    "        df = read_file(wine_path)\n",
+    "        examples = read_file(example_path)\n",
     "        for i in range(len(df)):\n",
+    "            print(f\"Processing wine {i+1}, {df['酒款'][i]}...\")\n",
     "            knowledge = df.iloc[i].to_string(index=False)\n",
-    "            labels = generate_labels(knowledge, None, None, NUM_LABELS, APPROACH)\n",
-    "            save_to_csv(f\"酒款{i+1}\", labels, output_csv)\n",
-    "    save_to_txt(output_csv, output_txt)"
+    "            labels = generate_labels(knowledge, examples, None, NUM_LABELS, APPROACH)\n",
+    "            save_to_csv(f\"酒款{i+1}\", labels, output_csv_2)\n",
+    "    save_to_txt(output_csv, output_txt_2)\n",
+    "    print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating labels by Approach 2\n",
+      "Processing wine 1, 安.葛蘿酒莊 上夜丘紅酒...\n",
+      "Processing wine 2, 拉菲堡 拉菲一軍紅酒...\n",
+      "Processing wine 3, 撒西凱亞二軍 奇達伯托紅酒...\n",
+      "Processing wine 4, 達慕斯紅酒...\n",
+      "Processing wine 5, 姆列達侯爵酒莊 RIOJA紅酒...\n",
+      "Processing wine 6, 克拉吉酒莊 利索頂級希哈精釀紅酒...\n",
+      "Processing wine 7, 約翰山堡 麗絲玲QbA白酒...\n",
+      "Processing wine 8, 梅爾卻酒莊 頂級卡本內蘇維濃紅酒...\n",
+      "Processing wine 9, 葛堡城堡酒廠 經典綠維特利納白酒...\n",
+      "Processing wine 10, 魯伯特酒莊 白海神花梢楠白酒...\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'output/labels_20250107.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAPPROACH\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[16], line 25\u001b[0m, in \u001b[0;36mmain\u001b[0;34m(APPROACH)\u001b[0m\n\u001b[1;32m     23\u001b[0m         labels \u001b[38;5;241m=\u001b[39m generate_labels(knowledge, examples, \u001b[38;5;28;01mNone\u001b[39;00m, NUM_LABELS, APPROACH)\n\u001b[1;32m     24\u001b[0m         save_to_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m酒款\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, labels, output_csv_2)\n\u001b[0;32m---> 25\u001b[0m \u001b[43msave_to_txt\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_csv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_txt_2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDone!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[4], line 95\u001b[0m, in \u001b[0;36msave_to_txt\u001b[0;34m(input_csv, output_txt)\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_to_txt\u001b[39m(input_csv, output_txt):\n\u001b[1;32m     94\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Extract labels column from CSV and save to TXT.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 95\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43minput_csv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     96\u001b[0m         reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mreader(file)\n\u001b[1;32m     97\u001b[0m         labels \u001b[38;5;241m=\u001b[39m [row[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader]  \u001b[38;5;66;03m# Assume second column is the label\u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/IPython/core/interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    277\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    278\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    281\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m     )\n\u001b[0;32m--> 284\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output/labels_20250107.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "main(APPROACH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_to_txt(output_csv_2, output_txt_2)"
    ]
   },
   {
@@ -224,14 +285,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "main(APPROACH)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
