--- a/label_gen.ipynb
+++ b/label_gen.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# wine-labeling-202412\n",
-    "MY_KEY = \"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\"\n",
+    "MY_KEY = \"wine-labeling-202412",  # key hidden
     "openai.api_key = MY_KEY\n",
     "OPENAI_API_URL = \"https://api.openai.com/v1/chat/completions\"\n",
     "APPROACH = 2 # 1: by information; 2: by wine\n",
