--- a/label_gen.ipynb
+++ b/label_gen.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# wine-labeling-202412\n",
-    "MY_KEY = \"wine-labeling-202412" # key has been hidden\n",  
+    "MY_KEY = \"wine-labeling-202412\" # key has been hidden\n",  
     "openai.api_key = MY_KEY\n",
     "OPENAI_API_URL = \"https://api.openai.com/v1/chat/completions\"\n",
     "APPROACH = 2 # 1: by information; 2: by wine\n",
